cambio de pdf a direccion en drive y eliminacion del pdf

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </ul>
         </div>
         <div class="nav-button">
-            <a href="./Rafael toro CV.pdf" class="btn" target="_blank">Download CV <i class="uil uil-file-alt"></i></a>
+            <a href="https://drive.google.com/file/d/1PEHISIb6LdKJGO17qCk9bxj3RJA4yYL_/view?usp=sharing" class="btn" target="_blank">Download CV <i class="uil uil-file-alt"></i></a>
         </div>
         <!-- <div class="nav-menu-btn">
             <i class="uil uil-bars" onclick="myMenuFunction()"></i>
